Sun Jun 28 19:03:46 2009  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* tool/instruby.rb (:gem): registers the bundled version
	  of minitest as a gem as rdoc or rake. 
	  c.f. [ruby-dev:38692].

Sun Jun 28 19:02:07 2009  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* lib/rubygems.rb (ConfigMap[:rubylibprefix]): new entry.

	* lib/rubygems/defaults.rb (Gem.default_dir): considers
	  "--with-rubylibprefix" configure option.

Sun Jun 28 09:21:00 2009  Tadayoshi Funaba  <tadf@dotrb.org>

	* complex.c: renamed some static functions.

	* rational.c: ditto.

Sat Jun 27 19:06:22 2009  Tadayoshi Funaba  <tadf@dotrb.org>

	* complex.c (nucomp_addsub): new

	* complex.c (nucomp_{add,sub}): use nucomp_addsub.

	* complex.c (nucomp_divide): changed the algorithm.

	* complex.c (nucomp_abs): added shortcuts.

Sat Jun 27 16:56:33 2009  Tadayoshi Funaba  <tadf@dotrb.org>

	* rational.c (nurat_cmp): use rb_num_coerce_cmp.

Sat Jun 27 16:45:10 2009  Tadayoshi Funaba  <tadf@dotrb.org>

	* complex.c: revised rdoc.

	* rational.c: ditto.

	* numeric.c: ditto.

Sat Jun 27 13:44:48 2009  Kouhei Sutou  <kou@cozmixng.org>

	* NEWS, lib/rss/maker/base.rb, test/rss/test_maker_2.0.rb: add
	item.guid.permanent_link? and item.guid.permanent_link=.

Sat Jun 27 13:41:00 2009  Kouhei Sutou  <kou@cozmixng.org>

	* NEWS: rss: 0.2.5 -> 0.2.7.

	* lib/rss/rss.rb, test/rss/test_version.rb: 0.2.6 -> 0.2.7.

Sat Jun 27 03:16:56 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* numeric.c (int_chr): use default_internal encoding as default
	  destination encoding if set.  [ruby-core:23997]

Sat Jun 27 03:09:04 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* io.c (argf_rewind): need to rewind $. and ARGF.lineno.
	  [ruby-core:24046]

	* io.c (struct argf): refactoring on $. and ARGF.lineno behavior.

Fri Jun 26 21:48:30 2009  Tanaka Akira  <akr@fsij.org>

	* ext/pty/pty.c (pty_getpty): check dup failure.

Fri Jun 26 17:33:46 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>
